# hello-world-transfer-hook-program

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
programs/hello-world-transfer-hook/: Cargo.toml
programs/hello-world-transfer-hook/src/: lib.rs
programs/hello-world-transfer-hook/src/instructions/: init_extra_account_meta.rs  initialize_whitelist.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs
programs/hello-world-transfer-hook/src/state/: mod.rs  whitelist.rs
tests/: hello-world-transfer-hook.test.ts
