[package]
name = "hello-world-transfer-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
anchor-spl = "0.31.1"
spl-discriminator = "0.4"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"

